srcadded to main

--- a/src/streaming-dataset.ipynb
+++ b/src/streaming-dataset.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "later-matter",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "homeless-european",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,13 +20,15 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sqlalchemy import create_engine\n",
-    "from config import user_name, user_pass"
+    "#from config import user_name, user_pass\n",
+    " \n",
+    "from config import conn_str  \n",
+    "from dboperations import connect2db, insertvalues"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "republican-aging",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -206,21 +206,20 @@
        "4      Italy,Spain,West Germany                  Italian    161.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Import Streaming database from CSV\n",
-    "streaming_db = pd.read_csv('MoviesOnStreamingPlatforms.csv')\n",
+    "streaming_db = pd.read_csv('../Resources/MoviesOnStreamingPlatforms.csv')\n",
     "streaming_db.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "formed-superintendent",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,8 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "tired-festival",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +396,7 @@
        "4                  Italian    161.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,15 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "subsequent-departure",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ljean\\anaconda3\\envs\\PythonData2\\lib\\site-packages\\pandas\\core\\frame.py:3188: SettingWithCopyWarning: \n",
+      "/Users/znurtokatli/opt/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py:3065: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -435,8 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "colored-advice",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,8 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "documentary-cooler",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +614,7 @@
        "4       Sergio Leone             None  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,15 +630,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "recognized-serum",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ljean\\anaconda3\\envs\\PythonData2\\lib\\site-packages\\pandas\\core\\frame.py:3188: SettingWithCopyWarning: \n",
+      "/Users/znurtokatli/opt/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py:3065: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -659,8 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "viral-color",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,8 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "capable-speech",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +841,7 @@
        "4            Italy              Spain  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,15 +856,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "brilliant-crawford",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ljean\\anaconda3\\envs\\PythonData2\\lib\\site-packages\\pandas\\core\\frame.py:3188: SettingWithCopyWarning: \n",
+      "/Users/znurtokatli/opt/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py:3065: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -888,8 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "needed-baker",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,8 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "immediate-title",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1073,7 @@
        "4              Spain          Italian               None  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,8 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "christian-plastic",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1272,7 @@
        "4    161.0                           Western  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,15 +1287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "regular-circulation",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ljean\\anaconda3\\envs\\PythonData2\\lib\\site-packages\\pandas\\core\\frame.py:3188: SettingWithCopyWarning: \n",
+      "/Users/znurtokatli/opt/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py:3065: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1698,7 +1685,7 @@
        "[5156 rows x 26 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,8 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "liable-cream",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1713,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,8 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "legal-productivity",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2099,7 @@
        "[5156 rows x 25 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2126,18 +2111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "derived-center",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "#output to CSV\n",
-    "streams_df.to_csv(\"streams_df.csv\", index=False, header=True)"
+    "streams_df.to_csv(\"../Output/streams_df.csv\", index=False, header=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "prescription-sponsorship",
    "metadata": {},
    "source": [
     "Convert back to Database"
@@ -2146,30 +2129,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preceding-consideration",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connect2db(conn_str)\n",
+    "insertvalues()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Connect to Local Database\n",
-    "rds_connection_string = (f'{user_name}:{user_pass}@)localhost:5432/streaming_db')\n",
-    "engine = create_engine(f'postgresql://{rds_connection_string}')"
+    "#rds_connection_string = (f'{user_name}:{user_pass}@)localhost:5432/streaming_db')\n",
+    "#engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "peripheral-meaning",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Use pandas to load csv converted DataFrame into database\n",
-    "streams_df.to_sql(name='streaming_db', con=engine, if_exists='append', index=False)"
+    "#streams_df.to_sql(name='streaming_db', con=engine, if_exists='append', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "agreed-trade",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2177,7 +2167,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "willing-findings",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2185,9 +2174,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pythondata2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2199,7 +2188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
