--- a/src/streaming-dataset.ipynb
+++ b/src/streaming-dataset.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook"
+    "#%matplotlib notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,10 +20,36 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sqlalchemy import create_engine\n",
-    "#from config import user_name, user_pass\n",
-    " \n",
+    "\n",
+    "import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import dbconnection files\n",
     "from config import conn_str  \n",
-    "from dboperations import connect2db, insertvalues"
+    "from dboperations import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection Succesful\n"
+     ]
+    }
+   ],
+   "source": [
+    "conn = connect2db(conn_str)"
    ]
   },
   {
@@ -2110,6 +2136,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert back to Database"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -2120,49 +2153,354 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>film_id</th>\n",
+       "      <th>film_name</th>\n",
+       "      <th>release_year</th>\n",
+       "      <th>imdb_score</th>\n",
+       "      <th>rotten_tomatoes_score</th>\n",
+       "      <th>service1</th>\n",
+       "      <th>service2</th>\n",
+       "      <th>service3</th>\n",
+       "      <th>service4</th>\n",
+       "      <th>first_genre</th>\n",
+       "      <th>second_genre</th>\n",
+       "      <th>third_genre</th>\n",
+       "      <th>fourth_genre</th>\n",
+       "      <th>fifth_genre</th>\n",
+       "      <th>sixth_genre</th>\n",
+       "      <th>seventh_genre</th>\n",
+       "      <th>eigth_genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Inception</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>87</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>Thriller</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>The Matrix</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>87</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Avengers: Infinity War</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>84</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Back to the Future</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>96</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>The Good, the Bad and the Ugly</td>\n",
+       "      <td>1966</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>97</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   film_id                       film_name  release_year  imdb_score  \\\n",
+       "0        1                       Inception          2010         8.8   \n",
+       "1        2                      The Matrix          1999         8.7   \n",
+       "2        3          Avengers: Infinity War          2018         8.5   \n",
+       "3        4              Back to the Future          1985         8.5   \n",
+       "4        5  The Good, the Bad and the Ugly          1966         8.8   \n",
+       "\n",
+       "  rotten_tomatoes_score  service1  service2  service3  service4 first_genre  \\\n",
+       "0                    87      True     False     False     False      Action   \n",
+       "1                    87      True     False     False     False      Action   \n",
+       "2                    84      True     False     False     False      Action   \n",
+       "3                    96      True     False     False     False   Adventure   \n",
+       "4                    97      True     False      True     False     Western   \n",
+       "\n",
+       "  second_genre third_genre fourth_genre fifth_genre sixth_genre seventh_genre  \\\n",
+       "0    Adventure      Sci-Fi     Thriller        None        None          None   \n",
+       "1       Sci-Fi        None         None        None        None          None   \n",
+       "2    Adventure      Sci-Fi         None        None        None          None   \n",
+       "3       Comedy      Sci-Fi         None        None        None          None   \n",
+       "4         None        None         None        None        None          None   \n",
+       "\n",
+       "  eigth_genre  \n",
+       "0        None  \n",
+       "1        None  \n",
+       "2        None  \n",
+       "3        None  \n",
+       "4        None  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Convert back to Database"
+    "#films prepare df\n",
+    "table_df = streams_df[['ID', 'Title', 'Year', 'IMDb', 'Rotten Tomatoes',\n",
+    "                       'Netflix', 'Hulu', 'Prime Video', 'Disney+', 'First Genre',\n",
+    "                       'Second Genre', 'Third Genre', 'Fourth Genre', 'Fifth Genre',\\\n",
+    "                       'Sixth Genre', 'Seventh Genre', 'Eigth Genre']].copy()\n",
+    "\n",
+    "table_df = table_df.rename(columns={'ID': 'film_id', 'Title': 'film_name', 'Year': 'release_year',\n",
+    "                                        'IMDb': 'imdb_score', 'Rotten Tomatoes': 'rotten_tomatoes_score',\n",
+    "                                        'Netflix': 'service1', 'Hulu': 'service2', \n",
+    "                                        'Prime Video': 'service3', 'Disney+': 'service4',\n",
+    "                                        'First Genre':'first_genre', 'Second Genre': 'second_genre',\n",
+    "                                        'Third Genre':'third_genre', 'Fourth Genre': 'fourth_genre',\n",
+    "                                        'Fifth Genre':'fifth_genre', 'Sixth Genre': 'sixth_genre',\n",
+    "                                        'Seventh Genre':'seventh_genre', 'Eigth Genre': 'eigth_genre' })\n",
+    " \n",
+    "#table_df['release_date'] = pd.to_datetime(table_df['release_date']) \n",
+    "table_df['rotten_tomatoes_score'] = list(map(lambda x: x[:-1], table_df['rotten_tomatoes_score'].values)) \n",
+    "\n",
+    "table_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values Succesfully Insert To films\n"
+     ]
+    }
+   ],
    "source": [
-    "connect2db(conn_str)\n",
-    "insertvalues()"
+    "#films insert df to table\n",
+    "insertvalues(conn, \"films\", table_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nominee_id</th>\n",
+       "      <th>nominee_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Christopher Nolan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lana Wachowski</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Anthony Russo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Robert Zemeckis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Sergio Leone</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   nominee_id       nominee_name\n",
+       "0           0  Christopher Nolan\n",
+       "1           1     Lana Wachowski\n",
+       "2           2      Anthony Russo\n",
+       "3           3    Robert Zemeckis\n",
+       "4           4       Sergio Leone"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Connect to Local Database\n",
-    "#rds_connection_string = (f'{user_name}:{user_pass}@)localhost:5432/streaming_db')\n",
-    "#engine = create_engine(f'postgresql://{rds_connection_string}')"
+    "#nominee directors prepare df \n",
+    "nominees_df = streams_df[['First Director' ]]\n",
+    "nominees_df.dropna()\n",
+    "nominees_df['First Director'].nunique() \n",
+    "\n",
+    "#return max id for table index\n",
+    "max_id = get_max_value(conn, 'nominees', 'nominee_id')\n",
+    "\n",
+    "nominees_df = nominees_df.reset_index() \n",
+    "nominees_df['index'] += max_id \n",
+    "\n",
+    "nominees_df = nominees_df.rename(columns={'index': 'nominee_id', 'First Director': 'nominee_name'})\n",
+    "nominees_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values Succesfully Insert To nominees\n"
+     ]
+    }
+   ],
    "source": [
-    "#Use pandas to load csv converted DataFrame into database\n",
-    "#streams_df.to_sql(name='streaming_db', con=engine, if_exists='append', index=False)"
+    "#nominees insert df to table\n",
+    "insertvalues(conn, 'nominees', nominees_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DB Connection Closed\n"
+     ]
+    }
+   ],
+   "source": [
+    "closeconnection(conn)"
+   ]
   },
   {
    "cell_type": "code",
